# apinator-secoda

./: .bumpversion.cfg  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  setup.cfg
.github/workflows/: dagger.yml
apinator_secoda/: __init__.py  api.py  utils.py
apinator_secoda/model/: __init__.py  announcement.py  collection.py  common.py  dashboard.py  dictionary.py  document.py  event.py  job.py  lineage.py  query.py  question.py  report.py  resource.py  search.py  table.py
ci/: main.py
tests/: test_basic.py
