[metadata]
version = 0.0.1
name = apinator-secoda
description = APInator binding to Databricks API
author = Rearc Data
author_email = data@rearc.io

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rearc-data/apinator-secoda

project_urls =
    Bug Tracker = https://github.com/rearc-data/apinator-secoda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
where = .
